<resources>
    <string name="app_name">kv4p HT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="voice_display">Voice</string>
    <string name="freedv_2400b_display">2400B</string>
    <string name="aprs_chat_display">APRS chat</string>
    <string name="memory_name_display">Memory name</string>
    <string name="memory_group_optional_display">Memory group (optional)</string>
    <string name="frequency_display">Frequency</string>
    <string name="offset_direction_display">Offset direction</string>
    <string name="tone_tx_display">Tone (TX)</string>
    <string name="add_memory_display">Add memory</string>
    <string name="show_advanced_options_display">Show advanced options</string>
    <string name="cancel_display">Cancel</string>
    <string name="download_display">Download</string>
    <string name="custom_offset_khz_display">Custom offset (kHz)</string>
    <string name="none_display">None</string>
    <string name="none_display1">None</string>
    <string name="tone_rx_display">Tone (RX)</string>
    <string name="none_display2">None</string>
    <string name="save_display">Save</string>
    <string name="skip_during_scan_display">Skip during scan</string>
    <string name="firmware_update_display">Firmware update</string>
    <string name="connecting_to_bootloader_display">Connecting to bootloader...</string>
    <string name="cancel_display1">Cancel</string>
    <string name="firmware_update_01">Photo of the bottom of the kv4p HT PCB, showing the reset button on the left, and the boot button on the right.</string>
    <string name="firmware_update_02">Keep your kv4p HT plugged into your phone, and push these buttons:\n\n1. Hold “Boot”\n2. Press and release “Reset”\n3. Release “Boot”\n4. Wait about 30 seconds for it to connect</string>
    <string name="firmware_update_03">Keep your phone screen on, this app open, and don’t unplug your kv4p HT until flashing is done.\n\nThis usually takes about 30 seconds.</string>
    <string name="add_memory_display1">Add memory</string>
    <string name="to_display">To:</string>
    <string name="all_memories_display1">ALL MEMORIES ▼</string>
    <string name="kv4p_ht" translatable="false">kv4p HT</string>
    <string name="vhf" translatable="false">VHF</string>
    <string name="uhf" translatable="false">UHF</string>
    <string name="push_to_talk_display">Push to talk</string>
    <string name="welcome_to_display">Welcome to</string>
    <string name="send_message_display">Send message</string>
    <string name="visualization_of_current_receive_audio_volume_display" translatable="false">Visualization of current receive audio volume</string>
    <string name="settings_display">Settings</string>
    <string name="more_display">More</string>
    <string name="send_aprs_position_beacond_display">Send APRS position beacon</string>
    <string name="write_up_to_67_chars">Write up to 67 chars...</string>
    <string name="aprs_to_placeholder">Callsign</string>
    <string name="cq" translatable="false">CQ</string>
    <string name="aprs_relay_via">via</string>
    <string name="squelch">Squelch</string>
    <string name="filters">Filters</string>
    <string name="accessibility">Accessibility</string>
    <string name="closed_captions">Closed captions</string>
    <string name="system_setting">System setting</string>
    <string name="aprs" translatable="false">APRS</string>
    <string name="highpass">Highpass</string>
    <string name="lowpass">Lowpass</string>
    <string name="radio">Radio</string>
    <string name="disable_animations">Disable animations</string>
    <string name="your_callsign">Your callsign</string>
    <string name="my_position_accuracy">My position accuracy</string>
    <string name="advanced">Advanced</string>
    <string name="versions">Versions</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="min_2m_tx_frequency">Min 2m TX frequency</string>
    <string name="max_2m_tx_frequency">Max 2m TX frequency</string>
    <string name="min_70cm_tx_frequency">Min 70cm TX frequency</string>
    <string name="max_70cm_tx_frequency">Max 70cm TX frequency</string>
    <string name="mic_gain_boost">Mic gain boost</string>
    <string name="app_version">App version</string>
    <string name="firmware_version">Firmware version</string>
    <string name="to" translatable="false">to&#160;</string>
    <string name="kv4p_aprs_message" translatable="false">KV4P</string>
    <string name="message_body_example">The quick brown fox jumped over the lazy dog.</string>
    <string name="all_memories">All memories</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="simplex">Simplex</string>
    <string name="memory_menu">Memory menu</string>
    <string name="radio_not_found">kv4p HT radio not found, plugged in?</string>
    <string name="handshake_message">Looking for kv4p HT radio...</string>
    <string name="module_not_found_message">Radio module not responding to ESP32, check PCB solder joints</string>
    <string name="no_firmware_installed">No firmware installed</string>
    <string name="new_firmware_available">New firmware available</string>
    <string name="set_your_callsign_to_beacon_your_position">Set your callsign to beacon your position</string>
    <string name="scan">SCAN</string>
    <string name="stop_scan">STOP SCAN</string>
    <string name="successfully_updated_firmware">Successfully updated firmware</string>
    <string name="pre_amp_de_emphasis"><![CDATA[Pre- & De-emphasis]]></string>
    <string name="set_your_callsign_to_send_text_chat">Set your callsign to send text chat</string>
    <string name="can_t_tx_outside_ham_band">Can\'t tx outside ham band</string>
    <string name="edit_memory">Edit memory</string>
    <string name="set_now">Set now</string>
    <string name="exact">Exact</string>
    <string name="approx">Approx</string>
    <string name="position_beacon_message_1">"Beaconing your "</string>
    <string name="position_beacon_message_2">" position on active frequency"</string>
    <string name="settings">Settings</string>
    <string name="beacon_my_position">Beacon my position</string>
    <string name="beacon_to_frequency">Beacon to frequency</string>
    <string name="beaconing_aprs_on">Beaconing APRS on %1$s...</string>
    <string name="current">Current</string>
    <string name="freq_144_3900" translatable="false">144.3900</string>
    <string name="freq_144_5750" translatable="false">144.5750</string>
    <string name="freq_144_6400" translatable="false">144.6400</string>
    <string name="freq_144_6600" translatable="false">144.6600</string>
    <string name="freq_144_8000" translatable="false">144.8000</string>
    <string name="freq_145_1750" translatable="false">145.1750</string>
    <string name="freq_145_8250" translatable="false">145.8250</string>
    <string name="aprs_my_position_icon">My position icon</string>
    <string name="aprs_history_window">History</string>
    <string name="aprs_message_filter">Message filter</string>
    <string name="aprs_show_all">Show all</string>
    <string name="aprs_only_mine">Only mine</string>
    <string name="aprs_delivery_pending">Message awaiting acknowledgment</string>
    <string name="aprs_delivery_delivered">Message acknowledged</string>
    <string name="aprs_delivery_rejected">Message rejected</string>
    <string name="aprs_delivery_failed">Message delivery failed</string>
    <string name="aprs_digipeated">Digipeated</string>
    <string name="all">All</string>
    <string name="mine">Mine</string>
    <string name="aprs_icon_phone">Phone</string>
    <string name="aprs_icon_person">Person</string>
    <string name="aprs_icon_house">House</string>
    <string name="aprs_icon_bicycle">Bicycle</string>
    <string name="aprs_icon_car">Car</string>
    <string name="aprs_icon_jeep">Jeep</string>
    <string name="aprs_icon_truck">Truck</string>
    <string name="aprs_icon_motorcycle">Motorcycle</string>
    <string name="aprs_icon_van">Van</string>
    <string name="aprs_icon_rv">RV</string>
    <string name="aprs_icon_18_wheeler">18-wheeler</string>
    <string name="aprs_icon_glider">Glider</string>
    <string name="aprs_icon_small_aircraft">Small aircraft</string>
    <string name="aprs_icon_helicopter">Helicopter</string>
    <string name="aprs_icon_sailboat">Sailboat</string>
    <string name="aprs_icon_motorboat">Motorboat</string>
    <string name="digipeat_packets">Digipeat (mesh)</string>
    <string name="aprs_igate_rf_to_is">Gate RF packets to APRS-IS</string>
    <string name="aprs_is_server">APRS-IS server</string>
    <string name="aprs_is_server_invalid">Enter a host or host:port</string>
    <string name="aprs_is_display">Show nearby APRS-IS traffic</string>
    <string name="aprs_internet">IS</string>
    <string name="aprs_internet_description">APRS-IS</string>
    <string name="wide" translatable="false">25kHz</string>
    <string name="narrow" translatable="false">12.5kHz</string>
    <string name="done">Done</string>
    <string name="sticky_ptt" translatable="false">Sticky PTT</string>
    <string name="module_state_squelched">SQL</string>
    <string name="module_state_tx">TX</string>
    <string name="find_repeaters_menu_item">Find nearby repeaters</string>
    <string name="flash_firmware_menu_item">Flash firmware</string>
    <string name="find_repeaters_title">Find nearby repeaters</string>
    <string name="find_repeaters_instructions">Sign in to RepeaterBook, or create an account if you don’t have one. Then, nearby repeaters should download automatically. If not, try tapping "Download" below.</string>
    <string name="nearby_repeaters_found">Nearby repeaters found:&#160;</string>
    <string name="save_repeaters_group_instructions">Which memory group would you like to save these new repeaters in?</string>
    <string name="rf_power">Power</string>
    <string-array name="rf_power_options">
        <item>High</item>
        <item>Low</item>
    </string-array>
    <string name="voice_mode">Voice mode</string>
    <string-array name="voice_mode_options">
        <item>Analog</item>
        <item>FreeDV 2400B</item>
    </string-array>
    <string name="mhz">MHz</string>
    <string name="flash_firmware_title">Flash firmware?</string>
    <string name="flash_firmware_message">This will replace the firmware on your kv4p HT.</string>
    <string name="flash_firmware_button">Flash</string>
    <string name="firmware_flash_requires_usb">Connect the radio by USB to flash firmware</string>
    <string name="aprs_message_not_accepted">APRS message was not accepted for transmission.</string>
</resources>
